chore(css): alignment fixes

--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ body {
   font-family: monospace;
   font-size: 1.2rem;
   position: relative;
-  right: 2rem;
+  right: 3rem;
   height: 300px;
   width: 300px;
   display: flex;
